@@ -46,6 +46,7 @@ public:
     virtual int putChar(uint8_t* buf, ucs4char c, enum ErrorHandlingMode mode) = 0;
     virtual ucs4char getChar(BinaryInputPort* port, enum ErrorHandlingMode mode) = 0;
     virtual ucs4string getCodecName() const = 0;
+    virtual int acceptBOM(ByteVector* bv) { return 0; }
 
     int putChar(BinaryOutputPort* port, ucs4char c, enum ErrorHandlingMode mode);
 };
